added changed event

--- a/client/src/admin/Dash.css
+++ b/client/src/admin/Dash.css
@@ -41,7 +41,7 @@ position:relative;
     width: 18vw;
     /* background-color: red; */
 }
-.main{
+.main1{
     /* background-color: red; */
     /* height: 70vh; */
     position: absolute;
