--- a/client/src/component/Dance.css
+++ b/client/src/component/Dance.css
@@ -1,10 +1,10 @@
 .musicboxs{
     width: 100%;
     height: auto;  
-    background-color:#191a1c;
+    /* background-color:; */
     font-family: 'Poppins';
     padding-top: 8vmax; 
-    color: white;
+    color: black;
     overflow-x: hidden;
 }
 .musicboxs h1{
@@ -23,7 +23,7 @@
    
 }
 
-.arraydata{
+.arraydatas{
     width: 60%;
     height: 100%;
 }
@@ -56,7 +56,7 @@ align-items: center;
     right: 0;
     color: black;
 }
- .audio{
+ .audios{
     width: 100%;
     height: 40vh;
     /* background-color: aqua; */
@@ -64,7 +64,7 @@ align-items: center;
     justify-content: space-evenly;
     
 }
-.audio .imgaudio{
+.audios .imgaudios{
     width: 25%;
     height: 100%;
     position: relative;
@@ -72,23 +72,23 @@ align-items: center;
   
    
 }
-.imgaudio img{
+.imgaudios img{
     width: 100%;
     height: 100%;
     position: absolute;
 }
-.imgaudio iframe{
+.imgaudios iframe{
     width: 100%;
     height: 110%;
    
 }
-.imgaudio audio{
+.imgaudios audio{
     width: 90%;
     height: 100%;
     margin-left: 1vmax;
     opacity: 0;
 }
-.imgaudio:hover > audio{
+.imgaudios:hover > audio{
     opacity: 1;
 }
 .workshops{
@@ -113,7 +113,7 @@ align-items: center;
     width: 100%;
     height: 160vh;
 }
-.corporate .corpo{
+.corporate .corpos{
     width: 100%;
     height: 100%;
     /* background-color:blue; */
@@ -123,7 +123,7 @@ align-items: center;
 
     
 }
-.corpo img{
+.corpos img{
     width: 60%;
     height: 22%;
     margin-top: 1vmax;
@@ -134,15 +134,16 @@ align-items: center;
     .musicboxs{
         width: 100%;
         height: auto;  
-        background-color:#191a1c;
+        /* background-color:#191a1c; */
         font-family: 'Poppins';
         padding-top: 15vmax; 
-        color: white;
+        color: black;
         overflow-x: hidden;
     }
     .musicboxs h1{
         text-align: center;
         margin-top: 2vmax;
+        font-size: 5vmax;
     }
     
     .musicboxs .musicimage{
@@ -155,7 +156,7 @@ align-items: center;
        
     }
     
-    .arraydata{
+    .arraydatas{
         width: 90%;
         height: 100%;
     }
@@ -188,26 +189,26 @@ align-items: center;
         right: 0;
         color: white;
     }
-     .audio{
+     .audios{
         width: 100%;
-        height: auto;
+        height: 100vh;
         /* background-color: aqua; */
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
         
     }
-    .audio .imgaudio{
+    .audios .imgaudios{
         width: 80%;
-        height: 20vmax;
+        height: 30vh;
         position: relative;
         /* background-color: rgb(233, 41, 41); */
       
        
     }
-    .imgaudio img{
+    .imgaudios img{
         width: 100%;
-        height: 100%;
+        height: 30vh;
         position: absolute;
     }
     .imgaudio iframe{
@@ -247,7 +248,7 @@ align-items: center;
         width: 100%;
         height: 160vh;
     }
-    .corporate .corpo{
+    .corporate .corpos{
         width: 100%;
         height: 100%;
         /* background-color:blue; */
@@ -257,13 +258,147 @@ align-items: center;
     
         
     }
-    .corpo img{
-        width: 60%;
+    .corpos img{
+        width: 80%;
         height: 22%;
+        /* background-color: red; */
         margin-top: 1vmax;
     }
 }
 
 
-
-
+@media (min-width:600px) and (max-width:830px) {
+    .musicboxs{
+        width: 100%;
+        height: auto;  
+        /* background-color:#191a1c; */
+        font-family: 'Poppins';
+        padding-top: 15vmax; 
+        color: black;
+        overflow-x: hidden;
+    }
+    .musicboxs h1{
+        text-align: center;
+        margin-top: 2vmax;
+        font-size: 5vmax;
+    }
+    
+    .musicboxs .musicimage{
+        width: 100%;
+        height:80vh ;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 1vmax;
+       
+    }
+    
+    .arraydatas{
+        width: 90%;
+        height: 100%;
+    }
+    .musicimage img{
+        width: 33%;
+        height: 30%;
+        cursor: pointer;
+    }
+    .imagedata {
+        width: 80%;
+        height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+    .imagedata1{
+        width: 100%;
+        height: 95%;
+       
+    }
+    .imagedata1 .bdahoja{
+        width: 80%;
+        height: 60%;
+    }
+    .imagedata .ri-close-circle-line{
+        position: absolute;
+        top: 0;
+        right: 0;
+        color: black;
+    }
+     .audios{
+        width: 100%;
+        height: 100vh;
+        /* background-color: aqua; */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        
+    }
+    .audios .imgaudios{
+        width: 80%;
+        height: 30vh;
+        position: relative;
+        /* background-color: rgb(233, 41, 41); */
+      
+       
+    }
+    .imgaudios img{
+        width: 100%;
+        height: 30vh;
+        position: absolute;
+    }
+    .imgaudio iframe{
+        width: 100%;
+        height: 110%;
+       
+    }
+    .imgaudio audio{
+        width: 90%;
+        height: 100%;
+        margin-left: 1vmax;
+        opacity: 0;
+    }
+    .imgaudio:hover > audio{
+        opacity: 1;
+    }
+    .workshops{
+        width: 100%;
+        height: auto;
+    }
+    .workshops .work{
+        width: 100%;
+        height: 100%;
+        /* background-color:blue; */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    
+        
+    }
+    .work img{
+        width: 80%;
+        height: 40%;
+        margin-top: 2vmax;
+    }
+    .corporate{
+        width: 100%;
+        height: 160vh;
+    }
+    .corporate .corpos{
+        width: 100%;
+        height: 100%;
+        /* background-color:blue; */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+        
+    }
+    .corpos img{
+        width: 80%;
+        height: 22%;
+        /* background-color: red; */
+        margin-top: 1vmax;
+    }
+}
